<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiscountCalculator</string>
    <string name="action_settings">Settings</string>
    
    <string name="tvDiscount">Discount%</string>
    <string name="tvListPrice">Listed Price</string>
    <string name="etListPriceHint">Enter Listed Price</string>
    <string name="tvCustom">Custom</string>
    <string name="tvSaving">You Saved</string>
    <string name="tvPaid">You Pay</string>
    <string name="tvInitZeroDollar">$ 0.00</string>
    
    <string name="radio1">10%</string>
    <string name="radio2">25%</string>
    <string name="radio3">50%</string>
    <string name="radio4">Custom</string>
    <string name="initCustomPercentage">25%</string>
    <string name="btnExit">Exit</string>
    
</resources>
